--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "formik": "^2.2.9",
+    "jodit": "^3.9.6",
+    "jodit-react": "^1.1.12",
     "parse": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
