--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "jodit": "^3.9.6",
     "jodit-react": "^1.1.12",
     "parse": "^3.4.0",
+    "pure-react-carousel": "^1.27.8",
     "react": "^17.0.2",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tooltip": "^4.2.21",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.1.9",
+    "use-force-update": "^1.0.7",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
